# locci-cloud

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE.md  PROGRESS_TRACKER.md  README.md
apps/admin-console/: README.md
apps/app-console/: README.md
apps/website/: README.md  index.html
apps/website/public/js/: script.js
bundler/: .gitignore  .justfile  Cargo.toml  README.md  build
bundler/downloads/react-app/: .dockerignore  Dockerfile  index.html
bundler/downloads/react-app/assets/: index-C0qpVzWq.css  index-CW13mX7E.js
bundler/src/: main.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/api/: client.rs  models.rs
cli/src/auth/: client.rs  mod.rs  service.rs
cli/src/cli/: mod.rs
cli/src/storage/: config.rs
docs/: README.md
docs/getting_started/: README.md
infra/: README.md
infrad/: bun.lockb  package.json  tsconfig.json
infrad/src/: app.ts  index.ts
infrad/src/lib/: incus.ts
infrad/src/tests/: incus.test.ts
k8s/: README.md
registry/: compose.yaml
services/bundler/: README.md
services/deploy/: README.md
services/upload/: .dockerignore  .env.sample  .gitignore  .http  Dockerfile  Justfile  Makefile  README.md  compose.yaml  drizzle.config.ts  package-lock.json  package.json  tsconfig.json
services/upload/scripts/: api-requests.sh  init-admin.ts  tests.ts
services/upload/src/: index.ts  tests.ts
upload/: .gitignore  package-lock.json  package.json  tsconfig.json
upload/src/: app.ts
upload/src/api/: index.ts  projects.ts
upload/src/utils/: dagger.ts  docker.ts  folders.ts
(+24 files in other folders)
