[package]
name = "locci-cli"
version = "1.0.0-alpha"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
tokio = { version = "1.38", features = ["full"] }
dotenv = "0.15"
dirs = "6.0"
thiserror = "2.0"
uuid = { version = "1.10", features = ["v4"] }
anyhow = "1.0.98"
